cfn-template.yml
# AWSTemplateFormatVersion: 2010-09-09
# Description: |
#   This is a new CloudFormation template.

# Resources:
#   eda:
#     Type: AWS::EC2::Instance
#     Properties:
#       ImageId: ami-0230bd60aa48260c6
#       InstanceType: t2.micro
#       KeyName: firstkey
#       UserData: 
#             #!/bin/bash
#             yum update -y
#             yum install -y httpd
#             systemctl start httpd
#             systemctl enable httpd
#             yum install -y wget
#             wget -O /var/www/html/static-web/edanur-gega.html https://github.com/EdanurGega/project3/raw/main/static-web/edanur-gega.html
#             wget -O /var/www/html/static-web/cat0.jpg https://github.com/EdanurGega/project3/raw/main/static-web/cat0.jpg
#             wget -O /var/www/html/static-web/cat1.jpg https://github.com/EdanurGega/project3/raw/main/static-web/cat1.jpg
#             wget -O /var/www/html/static-web/cat2.jpg https://github.com/EdanurGega/project3/raw/main/static-web/cat2.jpg
#       SecurityGroupIds: 
#         - !Ref newSec
#       Tags: 
#         - Key: Name 
#           Value: eda-instance

#   newSec:
#     Type: AWS::EC2::SecurityGroup
#     Properties:
#       GroupDescription: Allow incoming traffic on port 80
#       SecurityGroupIngress: 
#         - IpProtocol: tcp 
#           FromPort: 80
#           ToPort: 80
#           CidrIp: 0.0.0.0/0


AWSTemplateFormatVersion: 2010-09-09
Description: |
  This is a new CloudFormation template.

Resources:
  eda:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0230bd60aa48260c6
      InstanceType: t2.micro
      KeyName: firstkey
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          yum install -y wget
          cd /var/www/html
          wget https://raw.githubusercontent.com/EdanurGega/project3/main/static-web/index.html
          wget https://raw.githubusercontent.com/EdanurGega/project3/main/static-web/cat0.jpg
          wget https://raw.githubusercontent.com/EdanurGega/project3/main/static-web/cat1.jpg
          wget https://raw.githubusercontent.com/EdanurGega/project3/main/static-web/cat2.jpg

      SecurityGroupIds:
        - !Ref newSec
      Tags:
        - Key: Name
          Value: eda-instance

  newSec:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow incoming traffic on port 22,80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
